# MeBot

./: .gitattributes  .gitignore  CLAUDE.md  Dockerfile  README.md  chat_optimized_Hybrid.py  main.py  pyproject.toml  requirements.txt  ui.py
.github/workflows/: sync.yml
mebot/: __init__.py  config.py  llm_gateway.py  main.py  pipelines.py  prompt_loader.py  pushover.py  sanitizer.py  tools.py  types.py
prompts/: agent_quality.md  meBest.md  quality_facts.md  topic_guardrail.md  user_toxicity.md
tests/: __init__.py  conftest.py  test_mebot.py
